--- a/layouts/partials/prismjs-injection.html
+++ b/layouts/partials/prismjs-injection.html
@@ -1,4 +1,4 @@
-{{ $theme := site.Params.prismjs_theme | default "default" }}
+{{ $theme := site.Params.prismjs_theme | default "moondeer" }}
 <link rel="stylesheet" href="/assets/css/prism-{{ $theme }}.css">
 <script src="/assets/js/prism.js"></script>
 {{ $font_size := site.Params.prismjs_font_size | default "0.5rem" }}
