--- a/layouts/shortcodes/language.html
+++ b/layouts/shortcodes/language.html
@@ -8,7 +8,7 @@
 
 {{ $code = strings.TrimPrefix "<pre><code>" $code | strings.TrimSuffix "</code></pre>" }}
 
-<pre><code class="language-{{ $language }}">
+<pre class="line-numbers"><code class="language-{{ $language }}">
 {{ $code | htmlUnescape | safeHTML }}
 </code></pre>
 
