Hopefully fixed it with chomp

--- a/layouts/shortcodes/language.html
+++ b/layouts/shortcodes/language.html
@@ -2,7 +2,7 @@
 
 {{ $language := .Get 0 }}
 
-{{ $code := .Inner | markdownify }}
+{{ $code := .Inner | markdownify | chomp }}
 
 {{ if hasPrefix $code "<pre><code>" }}
 
