--- a/layouts/shortcodes/language.html
+++ b/layouts/shortcodes/language.html
@@ -1,19 +1,27 @@
-{{ if (and (.Get 0) .Inner) }}
+{{- $language := false -}}
+{{- if (and (and .IsNamedParams (.Get "language")) .Inner) -}}
+  {{- $language = .Get "language" -}}
+{{- else if (and (.Get 0) .Inner) -}}
+  {{- $language := .Get 0 -}}
+{{- end -}}
 
-{{ $language := .Get 0 }}
+{{- $code := .Inner | markdownify | chomp -}}
 
-{{ $code := .Inner | markdownify | chomp }}
+{{- if hasPrefix $code "<pre><code>" -}}
 
-{{ if hasPrefix $code "<pre><code>" }}
+{{- $code = strings.TrimPrefix "<pre><code>" $code | strings.TrimSuffix "</code></pre>" -}}
+{{- $code = htmlUnescape $code -}}
+{{- $code = replaceRE "<" "&lt;" $code -}}
+{{- $code = replaceRE "&" "&amp;" $code -}}
 
-{{ $code = strings.TrimPrefix "<pre><code>" $code | strings.TrimSuffix "</code></pre>" }}
+{{- $pre_class := "code-block" -}}
+{{- if (and .IsNamedParams (.Get "line-numbers")) -}}
+  {{- $pre_class = printf"%s line-numbers" $pre_class -}}
+{{ else if (and site.Params.prismjs_line_numbers (eq "true" site.Params.prismjs_line_numbers)) }}
+  {{- $pre_class = printf"%s line-numbers" $pre_class -}}
+{{- end -}}
 
-{{ $code = htmlUnescape $code }}
-
-{{ $code = replaceRE "<" "&lt;" $code }}
-{{ $code = replaceRE "&" "&amp;" $code }}
-
-<pre class="code-block line-numbers"><code class="language-{{ $language }}">
+<pre class="{{ $pre_class }}"><code class="language-{{ $language }}">
 {{ printf "%s" $code | htmlUnescape | safeHTML }}
 </code></pre>
 
