Corrected parameter handling

--- a/layouts/shortcodes/language.html
+++ b/layouts/shortcodes/language.html
@@ -19,7 +19,7 @@
 {{- $pre_class := "code-block" -}}
 {{- if (and .IsNamedParams (.Get "line-numbers")) -}}
   {{- $pre_class = printf "%s line-numbers" $pre_class -}}
-{{ else if (and site.Params.prismjs_line_numbers (eq "true" site.Params.prismjs_line_numbers)) }}
+{{ else if (and (not .IsNamedParams) (and site.Params.prismjs_line_numbers (eq "true" site.Params.prismjs_line_numbers))) }}
   {{- $pre_class = printf "%s line-numbers" $pre_class -}}
 {{- end -}}
 
