--- a/layouts/partials/prismjs-injection.html
+++ b/layouts/partials/prismjs-injection.html
@@ -15,7 +15,7 @@
 
 {{/* Link the javascript */}}
 {{/*<script src="/assets/js/{{ $script_src }}"></script>*/}}
-<script src="/assets/js/prism-languages.js"></script>
+<script src="/assets/js/prism.js"></script>
 
 {{/* Inject a style tag enforcing the desired font size */}}
 {{ $font_size := site.Params.prismjs_font_size | default "0.5rem" }}
