Hard coded theme and script urls until I figure this out

--- a/layouts/partials/prismjs-injection.html
+++ b/layouts/partials/prismjs-injection.html
@@ -10,10 +10,13 @@
 {{ end }}
 
 {{/* Link the stylesheet for the theme */}}
-<link rel="stylesheet" href="/assets/css/themes/{{ $theme }}">
+<!--<link rel="stylesheet" href="/assets/css/themes/{{ $theme | safeHTMLAttr }}">-->
+<link rel="stylesheet" href="/assets/css/themes/prism-moondeer.min.css">
+
 
 {{/* Link the javascript */}}
-<script src="/assets/js/{{ $script_src }}"></script>
+<!--<script src="/assets/js/{{ $script_src | safeHTMLAttr }}"></script>-->
+<script src="/assets/js/prism.min.js"></script>
 
 {{/* Inject a style tag enforcing the desired font size */}}
 {{ $font_size := site.Params.prismjs_font_size | default "0.5rem" }}
