--- a/layouts/shortcodes/highlight.html
+++ b/layouts/shortcodes/highlight.html
@@ -1,20 +1,30 @@
-<h5>highlight</h5>
-{{ $inner_text := .Inner }}
-{{ $markdownified := $inner_text | markdownify }}
+{{ $code := .Inner | markdownify | chomp }}
 
-<p>markdownified = {{ $markdownified | htmlEscape }}</p>
+{{ $language := findRE "class=\".*language-([^\"]+).*\"" $code }}
+{{ if $language }}
 
-{{ if (findRE "```[a-z]+" $inner_text) }}
+{{ $language = findRE "language-([[a-z0-9-]+)" $code }}
+{{ if $language }} {{ $language = index $language 0 }} {{ end }}
 
-<p>found code fence opening backticks</p>
-
-{{ $language := replaceRE "```([a-z]+)" "$1" $inner_text }}
-
-{{ $code := replaceRE "```[a-z]+" "$1" $inner_text }}
-
-<p> language = {{ $language }}</p>
-<p>code = {{ $code | htmlEscape | safeHTML }}</p>
 {{ end }}
 
+{{ $opening_tags := findRE "<pre[^>]*><code[^>]*>" $code }}
+{{ $closing_tags := findRE "</code></pre>" $code }}
 
-<p>inner_text = {{ $inner_text | htmlEscape | safeHTML }}</p>
+{{ if (and $opening_tags $closing_tags) }}
+{{/* code block */}}
+
+{{ $code = $code | strings.TrimPrefix (index $opening_tags 0) | strings.TrimSuffix (index $closing_tags 0)}}
+
+{{- $pre_class := "code-block" -}}
+{{- if (and .IsNamedParams (.Get "line-numbers")) -}}
+  {{- $pre_class = printf "%s line-numbers" $pre_class -}}
+{{ else if (and (not .IsNamedParams) (and site.Params.prismjs_line_numbers (eq "true" site.Params.prismjs_line_numbers))) }}
+  {{- $pre_class = printf "%s line-numbers" $pre_class -}}
+{{- end -}}
+
+<pre class="{{ $pre_class }}"><code class="{{ $language }}">
+{{ printf "%s" $code | htmlUnescape | safeHTML }}
+</code></pre>
+
+{{ end }}
