--- a/layouts/partials/prismjs-injection.html
+++ b/layouts/partials/prismjs-injection.html
@@ -1,8 +1,14 @@
 {{/* Determine the theme and resolve whether to use minified CSS and Javascript */}}
 {{ $theme := site.Params.prismjs_theme | default "moondeer" }}
 {{ $minify := true }}
-{{ if (and (site.Params.prismjs_minify) (eq site.Params.prismjs_minify "false") )}}
+{{ if (and (site.Params.prismjs_minify) (eq site.Params.prismjs_minify "false")) }}
 {{ $minify = false }}
+{{ end }}
+
+{{/* Determine whether to soft-wrap code */}}
+{{ $soft_wrap := true }}
+{{ if (and (site.Params.prismjs_soft_wrap) (eq site.Params.prismjs_soft_wrap "false")) }}
+{{ $soft_wrap = false }}
 {{ end }}
 
 {{/* Link the stylesheet for the theme */}}
@@ -14,4 +20,4 @@
 
 {{/* Inject a style tag enforcing the desired font size */}}
 {{ $font_size := site.Params.prismjs_font_size | default "0.5rem" }}
-<style>code[class*=language-],pre[class*=language-] { font-size: {{ $font_size }} !important; }</style>
+<style>code[class*=language-],pre[class*=language-]{font-size:{{$font_size}}!important;{{with $soft_wrap}}white-space:pre-wrap;{{end}}}</style>
