--- a/layouts/shortcodes/highlight.html
+++ b/layouts/shortcodes/highlight.html
@@ -1,1 +1,1 @@
-{{ partial "highlight.html" (dict "inner" .Inner ) }}
+{{ partial "highlight.html" (dict "inner" .Inner "line_numbers" (.Get "line-numbers")) }}
