--- a/layouts/shortcodes/language.html
+++ b/layouts/shortcodes/language.html
@@ -30,7 +30,7 @@
 
       {{ if .IsNamedParams }}
 
-{{ partial "highlight.html" (dict "inner" $inner "line_numbers" (.Get "line-numbers") "preserve_whitespace" (.Get "preserve-whitespace") "keep_markup" (.Get "keep-markup") "data_language" (.Get "data-language") "dependencies" (.Get "dependencies")) }}
+{{ partial "highlight.html" (dict "inner" $inner "line_numbers" (.Get "line-numbers") "preserve_whitespace" (.Get "preserve-whitespace") "keep_markup" (.Get "keep-markup") "data_language" (.Get "data-language") "dependencies" (.Get "dependencies") "soft_wrap" (.Get "soft-wrap")) }}
 
       {{ else }}
 
