--- a/layouts/shortcodes/highlight.html
+++ b/layouts/shortcodes/highlight.html
@@ -1,1 +1,1 @@
-{{ partial "highlight.html" (dict "inner" .Inner "line_numbers" (.Get "line-numbers") "preserve_whitespace" (.Get "preserve-whitespace") "keep_markup" (.Get "keep-markup") "data_language" (.Get "data-language") "dependencies" (.Get "dependencies")) }}
+{{ partial "highlight.html" (dict "inner" .Inner "line_numbers" (.Get "line-numbers") "preserve_whitespace" (.Get "preserve-whitespace") "keep_markup" (.Get "keep-markup") "data_language" (.Get "data-language") "dependencies" (.Get "dependencies") "soft_wrap" (.Get "soft-wrap")) }}
