--- a/layouts/partials/highlight.html
+++ b/layouts/partials/highlight.html
@@ -1,70 +1,70 @@
-{{ if .inner }}
+{{- if .inner }}
 
-{{ $fence_open := .inner | findRE "^[ \n\t\r]*```" }}
-{{ if $fence_open }}
-{{ $fence_open = index $fence_open 0 }}
+{{- $fence_open := .inner | findRE "^[ \n\t\r]*```" }}
+{{- if $fence_open }}
+{{- $fence_open = index $fence_open 0 }}
 
-{{ $code := .inner | strings.TrimPrefix $fence_open }}
+{{- $code := .inner | strings.TrimPrefix $fence_open }}
 
-{{ $language := $code | findRE "^[-a-z0-9]+" }}
-{{ if $language }}
-{{ $language = index $language 0 }}
+{{- $language := $code | findRE "^[-a-z0-9]+" }}
+{{- if $language }}
+{{- $language = index $language 0 }}
 
-{{ $code = $code | strings.TrimPrefix $language }}
+{{- $code = $code | strings.TrimPrefix $language }}
 
-{{ $fence_close := $code | findRE "```[ \n\t\r]*$" }}
-{{ if $fence_close }}
-{{ $fence_close = index $fence_close 0 }}
+{{- $fence_close := $code | findRE "```[ \n\t\r]*$" }}
+{{- if $fence_close }}
+{{- $fence_close = index $fence_close 0 }}
 
-{{ $code = $code | strings.TrimSuffix $fence_close }}
+{{- $code = $code | strings.TrimSuffix $fence_close }}
 
-{{ $class := printf "code-block language-%s" $language }}
-{{ if (and .line_numbers (eq .line_numbers "true")) }}
-{{ $class = printf "%s line-numbers" $class }}
-{{ else if (and (not .line_numbers) (and site.Params.prismjs_line_numbers (eq "true" site.Params.prismjs_line_numbers))) }}
-{{ $class = printf "%s line-numbers" $class }}
-{{ end }}
+{{- $class := printf "code-block language-%s" $language }}
+{{- if (and .line_numbers (eq .line_numbers "true")) }}
+{{- $class = printf "%s line-numbers" $class }}
+{{- else if (and (not .line_numbers) (and site.Params.prismjs_line_numbers (eq "true" site.Params.prismjs_line_numbers))) }}
+{{- $class = printf "%s line-numbers" $class }}
+{{- end }}
 
-{{ if (or (and .preserve_whitespace (eq .preserve_whitespace "true")) (and site.Params.prismjs_preserve_whitespace (eq site.Params.prismjs_preserve_whitespace "true"))) }}
-{{ $class = printf "%s no-whitespace-normalization" $class }}
-{{ end }}
+{{- if (or (and .preserve_whitespace (eq .preserve_whitespace "true")) (and site.Params.prismjs_preserve_whitespace (eq site.Params.prismjs_preserve_whitespace "true"))) }}
+{{- $class = printf "%s no-whitespace-normalization" $class }}
+{{- end }}
 
-{{ if (or (and .keep_markup (eq .keep_markup "false")) (and site.Params.prismjs_keep_markup (eq site.Params.prismjs_keep_markup "false"))) }}
-{{ $class = printf "%s no-keep-markup" $class }}
-{{ end }}
+{{- if (or (and .keep_markup (eq .keep_markup "false")) (and site.Params.prismjs_keep_markup (eq site.Params.prismjs_keep_markup "false"))) }}
+{{- $class = printf "%s no-keep-markup" $class }}
+{{- end }}
 
-{{ $attributes := "" }}
-{{ with .data_language }}
-{{ $attributes = printf "data-language='%s'" . }}
-{{ end }}
+{{- $attributes := "" }}
+{{- with .data_language }}
+{{- $attributes = printf "data-language='%s'" . }}
+{{- end }}
 
-{{ with .dependencies }}
-{{ if $attributes }}
-{{ $attributes = printf "%s data-dependencies='%s'" $attributes . }}
-{{ else }}
-{{ $attributes = printf "data-dependencies='%s'" . }}
-{{ end }}
-{{ end }}
+{{- with .dependencies }}
+{{- if $attributes }}
+{{- $attributes = printf "%s data-dependencies='%s'" $attributes . }}
+{{- else }}
+{{- $attributes = printf "data-dependencies='%s'" . }}
+{{- end }}
+{{- end }}
 
-{{ with .soft_wrap }}
-{{ $style := cond (eq . "true") "white-space:pre-wrap!important" "white-space:pre!important" }}
-{{ if $attributes }}
-{{ $attributes = printf "%s style='%s'" $attributes $style }}
-{{ else }}
-{{ $attributes = printf "style='%s'" $style }}
-{{ end }}
-{{ end }}
+{{- with .soft_wrap }}
+{{- $style := cond (eq . "true") "white-space:pre-wrap!important" "white-space:pre!important" }}
+{{- if $attributes }}
+{{- $attributes = printf "%s style='%s'" $attributes $style }}
+{{- else }}
+{{- $attributes = printf "style='%s'" $style }}
+{{- end }}
+{{- end }}
 
-{{ with $attributes }}
-{{ printf "<script type='text/plain' class='%s' %s>\n%s\n</script>" $class . (htmlUnescape $code) | safeHTML }}
-{{ else }}
-{{ printf "<script type='text/plain' class='%s'>\n%s\n</script>" $class (htmlUnescape $code) | safeHTML }}
-{{ end }}
+{{- with $attributes }}
+{{- printf "<script type='text/plain' class='%s' %s>\n%s\n</script>" $class . (htmlUnescape $code) | safeHTML }}
+{{- else }}
+{{- printf "<script type='text/plain' class='%s'>\n%s\n</script>" $class (htmlUnescape $code) | safeHTML }}
+{{- end }}
 
-{{ end }}
+{{- end }}
 
-{{ end }}
+{{- end }}
 
-{{ end }}
+{{- end }}
 
-{{ end }}
+{{- end }}
