fixed soft-wrap not being applied cause !important gets dropped

--- a/layouts/partials/prism-injection.html
+++ b/layouts/partials/prism-injection.html
@@ -110,4 +110,4 @@
 <style>code[class*=language-],pre[class*=language-]{font-size:{{ $font_size }}!important}</style>
 
 {{- /* Inject a style tag enforcing soft wrapping preference */}}
-<style>code[class*=language-],pre[class*=language-]{white-space:pre{{ with $soft_wrap }}-wrap{{ end }}!important}</style>
+<style>code[class*=language-],pre[class*=language-]{white-space:pre{{ with $soft_wrap }}-wrap{{ end }}}</style>
