--- a/layouts/partials/plugin-prism/injection.html
+++ b/layouts/partials/plugin-prism/injection.html
@@ -1,7 +1,33 @@
-{{- if (or (.HasShortCode "highlight") (.HasShortcode "language")) -}}
+{{ /* Check for use of one of the shortcodes */ -}}
+{{- $has_shortcode := false -}}
+{{- if .IsNode -}}
+  {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}}
+    {{- $has_shortcode = true -}}
+  {{- else -}}
+    {{- range .Pages -}}     
+      {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}} 
+        {{- $has_shortcode = true -}}
+      {{- else -}}  
+        {{- range .Pages -}}
+          {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}} 
+            {{- $has_shortcode = true -}}
+          {{- end -}}
+        {{- end -}}
+      {{- end -}}
+    {{- end -}}
+  {{- end -}}
+{{- else -}}
+  {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}} 
+    {{- $has_shortcode = true -}}
+  {{- end -}}
+{{- end -}}
+
+{{- if $has_shortcode -}}
 
 {{- /* Resolve the plugin parameter values. */ -}}
-{{- partial "plugin-prism/load-parameters.html" . -}}
+{{- if not (.Scratch.Get "plugin-prism.Parameters") -}}
+  {{- partial "plugin-prism/load-parameters.html" . -}}
+{{- end -}}
 
 {{- with (.Scratch.Get "plugin-prism.Parameters") -}}
 
@@ -36,14 +62,13 @@
   {{- $scripts := slice (resources.Get "js/plugin-prism/prism.js") -}}
   {{- range $name := $plugins -}}
     {{- $source := printf "%s/%s/prism-%s.js" $dir $name $name -}}
-    {{- $scripts = $scripts | append resources.Get $source -}}
+    {{- $scripts = $scripts | append (resources.Get $source) -}}
   {{- end -}}
   {{- $source_dir := "js/plugin-prism/" -}}
   {{- $template_name := "configure.js" -}}
   {{- $source := path.Join $source_dir $template_name -}}
   {{- $target := path.Join "assets" $source -}}
-  {{- $configure := resources.Get $source
-                    | resources.ExecuteAsTemplate $target $ -}}                    
+  {{- $configure := resources.Get $source | resources.ExecuteAsTemplate $target $ -}}                    
   {{- $scripts = $scripts | append $configure -}}
   
   {{- /* Concatenate the scripts. */ -}}
@@ -83,4 +108,4 @@
 
 {{- end -}}
 
-{{ end -}}
+{{- end }}
