--- a/layouts/partials/plugin-prism/injection.html
+++ b/layouts/partials/plugin-prism/injection.html
@@ -1,15 +1,15 @@
-{{ /* Check for use of one of the shortcodes */ -}}
+{{/* Check for use of one of the shortcodes */ -}}
 {{- $has_shortcode := false -}}
 {{- if .IsNode -}}
-  {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}}
+  {{- if .HasShortcode "prism" -}}
     {{- $has_shortcode = true -}}
   {{- else -}}
     {{- range .Pages -}}     
-      {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}} 
+      {{- if .HasShortcode "prism" -}} 
         {{- $has_shortcode = true -}}
       {{- else -}}  
         {{- range .Pages -}}
-          {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}} 
+          {{- if .HasShortcode "prism" -}} 
             {{- $has_shortcode = true -}}
           {{- end -}}
         {{- end -}}
@@ -17,7 +17,7 @@
     {{- end -}}
   {{- end -}}
 {{- else -}}
-  {{- if (or (.HasShortcode "highlight") (.HasShortcode "language")) -}} 
+  {{- if .HasShortcode "prism" -}} 
     {{- $has_shortcode = true -}}
   {{- end -}}
 {{- end -}}
